--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,7 +12,7 @@ Jsonify offers a rich collection of data, from mock data for development to fasc
 
 ## Open and Free
 
-We believe in openness. Jsonify is freely available for you to use, experiment with, and integrate into your projects. Feel the freedom to access the API at [www.jsonify.com](https://www.jsonify.com).
+We believe in openness. Jsonify is freely available for you to use, experiment with, and integrate into your projects. Feel the freedom to access the API at [www.jsonifyyy.com](https://www.jsonifyyy.com).
 
 ## Contribute to Our Vision
 
