repo link updated.

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,6 +16,6 @@ We believe in openness. Jsonify is freely available for you to use, experiment w
 
 ## Contribute to Our Vision
 
-Jsonify is not just open in terms of usage; it's an open-source project. We invite developers from around the world to contribute to its growth and improvement. Join us on our [GitHub repository](https://github.com/your-jsonify-repo) and be part of the Jsonify community.
+Jsonify is not just open in terms of usage; it's an open-source project. We invite developers from around the world to contribute to its growth and improvement. Join us on our [GitHub repository](https://github.com/Zack-Dx/Jsonify-RestAPI) and be part of the Jsonify community.
 
 Experience the power of Jsonify today and unlock a world of data-driven possibilities.
